// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`preFunction()\` will add a member \`startTime\`. 1`] = `
Object {
  "startTime": 2019-04-15T00:00:00.000Z,
}
`;

exports[`Options of Profiler. 1`] = `
Object {
  "duration": 500,
  "isAlwaysShowQuery": false,
  "level": "ALL",
  "logger": Object {
    "error": [Function],
    "info": [Function],
  },
  "totalDocsExamined": 200,
}
`;

exports[`The default options of Profiler. 1`] = `
Object {
  "duration": 1000,
  "isAlwaysShowQuery": true,
  "level": "COLLSCAN",
  "logger": Object {
    "error": [Function],
    "info": [Function],
  },
  "totalDocsExamined": undefined,
}
`;
